assets/css/style.css
/* ... */
pre code {
  display: block;
  box-shadow: none;
}

blockquote {
  color: #666;
  margin-bottom: 20px;
  padding: 0 0 0 20px;
  border-left: 3px solid #bbb;
}

ul, ol, dl {
  margin-bottom: 15px
}

ul li {
  list-style: inside;
  padding-left: 10px;
}

ol li {
  list-style: decimal inside;
  padding-left: 20px;
}

dl dt {
  font-weight: bold;
}

dl dd {
  padding-left: 20px;
  font-style: italic;
}

dl p {
  padding-left: 20px;
  font-style: italic;
}

hr {
  height: 1px;
  margin-bottom: 5px;
  border: none;
  background: url('../images/bg_hr.png') repeat-x center;
}

table {
  border: 1px solid #373737;
  margin-bottom: 20px;
  text-align: left;
 }

th {
  font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  padding: 10px;
  background: #373737;
  color: #fff;
 }

td {
  padding: 10px;
  border: 1px solid #373737;
 }

form {
  background: #f2f2f2;
  padding: 20px;
}

/*******************************************************************************
Full-Width Styles
*******************************************************************************/

.outer {
  width: 100%;
}

.inner {
  position: relative;
  max-width: 750px;
  margin: 0 auto;
}

#forkme_banner {
  display: block;
  position: absolute;
  top:0;
  right: 10px;
  z-index: 10;
  padding: 10px 20px 10px 20px;
  color: #fff;
  background:#ea5906 no-repeat 95% 50%;
/*  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;*/
  font-weight: 700;
  box-shadow: 0 0 10px rgba(0,0,0,.5);
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

#header_wrap {
  background: #212121;
  background: -moz-linear-gradient(top, #373737, #212121);
  background: -webkit-linear-gradient(top, #373737, #212121);
  background: -ms-linear-gradient(top, #373737, #212121);
  background: -o-linear-gradient(top, #373737, #212121);
  background: linear-gradient(top, #373737, #212121);
}

#header_wrap .inner {
  padding: 40px 10px 10px 10px;
}

#project_title {
  margin: 10px 0px 0px 0px;
  padding: 0px 0px 0px 80px;
  color: #fff;
  font-size: 40px;
  font-weight: 700;
  line-height: 120%;
  text-shadow: #111 0px 0px 10px;
  background-image: url(/assets/img/icon_white.png);
  background-repeat: no-repeat;
  background-size: 70px;
  background-position: left center;
}

#project_tagline {
  color: #fff;
  font-size: 24px;
  font-weight: 300;
  background: none;
  text-shadow: #111 0px 0px 10px;
}

#downloads {
  position: absolute;
  width: 210px;
  z-index: 10;
  bottom: -40px;
  right: 0;
  height: 70px;
  background: url('../images/icon_download.png') no-repeat 0% 90%;
}

.zip_download_link {
  display: block;
  float: right;
  width: 90px;
  height:70px;
  text-indent: -5000px;
  overflow: hidden;
  background: url(../images/sprite_download.png) no-repeat bottom left;
}

.tar_download_link {
  display: block;
  float: right;
  width: 90px;
  height:70px;
  text-indent: -5000px;
  overflow: hidden;
  background: url(../images/sprite_download.png) no-repeat bottom right;
  margin-left: 10px;
}

.zip_download_link:hover {
  background: url(../images/sprite_download.png) no-repeat top left;
}

.tar_download_link:hover {
  background: url(../images/sprite_download.png) no-repeat top right;
}

#main_content_wrap {
  background: #f0f2f4;
  border-top: 1px solid #111;
  border-bottom: 1px solid #111;
}

#main_content {
  padding-top: 0px;
  padding-bottom: 20px;
}

#footer_wrap {
  background: #212121;
  padding-top:20px;
  padding-bottom:20px;
}

.sub_header p{
    padding: 0px 0px 0px 7px;
    margin: 0px 0px 8px 0px;
    font-weight:600;
}


/*******************************************************************************
Twitter Bootstrap
*******************************************************************************/

[class^="icon-"],
[class*=" icon-"] {
  vertical-align: middle;
}

#main_content_wrap{
    border-top:0px;
}

.navbar-inverse .navbar-inner {
    background-color: #212121;
    background-image: -moz-linear-gradient(top, #222222, #111111);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#212121), to(#111111));
    background-image: -webkit-linear-gradient(top, #212121, #111111);
    background-image: -o-linear-gradient(top, #212121, #111111);
    background-image: linear-gradient(to bottom, #212121, #111111);
    background-repeat: repeat-x;
    border-color: #212121;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff212121', endColorstr='#ff111111', GradientType=0);
    border-radius:0px;
    border:none;
}

.navbar-inner{
    padding-left:0px;
    padding-right:0px;
}

.navbar-inner ul li{
    list-style: none;
}

.article-body{
    background-color:#ffffff;
    border-radius:3px;
    padding: 40px 30px 10px 30px;
    margin: 0px 0px 20px 0px;
    box-shadow: 0 0 10px rgba(0,0,0,.1);
}

.article-date{
    text-align:center;
    font-size:20px;
}

.article-tag{
    padding:0px 20px 0px 0px;
    text-align:right;
    line-height:100%;
    font-size:15px;
    font-weight:600;
}

.article-title{
    text-align:center;
    font-size:24px;
    font-weight:600;
    line-height:100%;
/*    margin:0px;*/
}

.article-content{
    padding:5px 0px 20px 0px;
}


.article-title a{
    color:#007edf;
    text-shadow: 0px 0.8px 2px #4cbafe;
}

.article-title a:hover{
    color: #0069ba;
/*    text-shadow: #0069ba 0px 0px 1px;*/
    text-decoration: none;
}

.static-body{
    padding: 5px 10px 10px 10px;
}

.entries-body{
    background-color:#ffffff;
    border-radius:3px;
    padding: 15px 20px 13px 20px;
    margin: 0px 0px 10px 0px;
    box-shadow: 0 0 10px rgba(0,0,0,.1);
}

.entries-title{
    font-size: 20px;
    font-weight: 600;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.entries-date{
}


.pagenation{
    text-align: center;
}

.page-button{
    width: 48%;
    font-size: 16px;
    padding: 13px;
    margin: 2px;
}
/* ... */

